[package]
name = "p-test"
version = "0.1.0"
edition = "2021"
description = "p-test provides procedural macro to help you write parameterized tests easily."
repository = "https://github.com/ntalbs/p-test"
license = "MIT"
license-file = "./LICENSE"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version = "2.0", features = ["full"]}
