[package]
name = "p-test"
version = "1.0.1"
authors = ["ntalbs <ntalbsen@gmail.com>"]
edition = "2021"
description = "p-test provides procedural macro to help you write parameterized tests easily."
repository = "https://github.com/ntalbs/p-test"
license = "MIT"
keywords = ["parameterized", "parameterised", "test", "testing", "unit-test"]
categories = ["development-tools", "development-tools::testing"]

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = "1.0"
syn = {version = "2.0", features = ["full"]}
